--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/HeaderTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/HeaderTemplate.html
@@ -4,8 +4,12 @@
     <div class="ui-grid-cell-contents" col-index="renderIndex">
 
         <span>
+            <span ng-if="col.colDef.currentSorting != undefined" >
+                <span ng-show="col.colDef.currentSorting=='ASC'">&uarr;</span>
+                <span ng-show="col.colDef.currentSorting=='DESC'">&darr;</span>
+            </span>
 
-            {{col.displayName}}
+            {{col.displayName}} 
 
         </span>
 
