--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor2.html
@@ -1,82 +1,104 @@
 ﻿
 
+<div class="modal" tabindex="-1" role="dialog" aria-hidden="true" ng-controller="RouteRuleEditorController2">
+    <div class="modal-dialog  modal-x-lg">
+        <div class="modal-content">
+            <div class="modal-header" ng-show="title">
+                <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" ng-bind="title"></h4>
+            </div>
 
-<div class="container-fluid ">
-    <div class="panel panel-primary panel-over-color">
-        <div class="panel-body">
-            
-            <div class="row style-row">
-                <div class="col-lg-2  style-col">
-                    <label class="control-label" style="padding-top:6px">Rule Type:</label>
-                </div>
-                <div class="col-lg-2 style-col">
-                    <vr-dropdown datatextfield="name" datavaluefield="objectType"
-                                 entityname="" type="standard" options="optionsRouteType"></vr-dropdown>
-                </div>
-            </div>
-            <div class="row style-row">
-                <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
-                             onselectionchange="update2" options="optionsRuleType"></vr-dropdown>
-                <div ng-include src="optionsRuleType.lastselectedvalue.url">
-                </div> 
-            </div>
-            <div class="row style-row">             
-                <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
-                             options="optionsEditorType"></vr-dropdown>
+            <div class="modal-body" style="max-height:650px;overflow-y:auto">
+                <div>
+                    <div class="panel panel-primary panel-over-color">
+                        <div class="panel-body">
+                            <div>
+                                <div class="row style-row">
+                                    <div class="col-lg-2  style-col">
+                                        <label class="control-label" style="padding-top:6px">Rule Type:</label>
+                                    </div>
+                                    <div class="col-lg-2 style-col">
+                                        <vr-dropdown datatextfield="name" datavaluefield="objectType"
+                                                     entityname="" type="standard" options="optionsRouteType"></vr-dropdown>
+                                    </div>
+                                </div>
+                                <div class="row style-row">
+                                    <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
+                                                 onselectionchange="update2" options="optionsRuleType"></vr-dropdown>
+                                    <div ng-include src="optionsRuleType.lastselectedvalue.url">
+                                    </div>
+                                </div>
+                                <div class="row style-row">
+                                    <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
+                                                 options="optionsEditorType"></vr-dropdown>
 
-                <div ng-include src=" optionsEditorType.lastselectedvalue.url">
-                </div>
-            </div>
-            <div class="row style-row">
-                <div class="col-lg-2  style-col">
-                    <label class="control-label" style="padding-top:6px">Begin Effective Date:</label>
-                </div>
-                <div class="col-lg-2  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                    <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                        <input size="10" name="d.testdate" class="form-control" ng-model="BEDDate"  data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-class="isvalidcompDate('BEDDate')">
-                        <div class="tooltip-error" ng-show="initErrortooltipBED()">{{msgd}}</div>
+                                    <div ng-include src=" optionsEditorType.lastselectedvalue.url">
+                                    </div>
+                                </div>
+                                <div class="row style-row">
+                                    <div class="col-lg-2  style-col">
+                                        <label class="control-label" style="padding-top:6px">Begin Effective Date:</label>
+                                    </div>
+                                    <div class="col-lg-2  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                                        <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                                            <input size="10" name="d.testdate" class="form-control" ng-model="BEDDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-class="isvalidcompDate('BEDDate')">
+                                            <div class="tooltip-error" ng-show="initErrortooltipBED()">{{msgd}}</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2  style-col">
+                                        <label class="control-label" style="padding-top:6px">End Effective Date:</label>
+                                    </div>
+                                    <div class="col-lg-2  style-col">
+                                        <div style="display: inline-block; position: relative; width: 100%" ng-mouseenter="showtde=true" ng-mouseleave="showtde=false">
+                                            <input size="10" ng-class="isvalidcompDateEED()" class="form-control" data-min-date="{{BEDDate}}" ng-model="EEDDate" data-autoclose="1" placeholder="Date" data-date-format="dd/MM/yyyy" bs-datepicker type="text">
+                                            <div class="tooltip-error" ng-show="initErrortooltipEED()">{{msged}}</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="row style-row" ng-show="optionsRouteType.lastselectedvalue.name != 'Block Route' && optionsRouteType.lastselectedvalue.url!='' " style="min-height:200px">
+                                    <div class="col-lg-12  style-col">
+                                        <h4>{{optionsRouteType.lastselectedvalue.name}} Details:</h4>
+                                    </div>
+                                    <div ng-include src="optionsRouteType.lastselectedvalue.url">
+
+                                    </div>
+                                </div>
+                                <div class="row ">
+                                    <div class="col-lg-12  style-col">
+                                        <label class="control-label">Reason:</label>
+                                        <textarea class="form-control" ng-model="Reason" />
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-2  style-col">
-                    <label class="control-label" style="padding-top:6px">End Effective Date:</label>
-                </div>
-                <div class="col-lg-2  style-col">
-                    <div style="display: inline-block; position: relative; width: 100%" ng-mouseenter="showtde=true" ng-mouseleave="showtde=false">
-                        <input size="10" ng-class="isvalidcompDateEED()" class="form-control" data-min-date="{{BEDDate}}" ng-model="EEDDate" data-autoclose="1" placeholder="Date" data-date-format="dd/MM/yyyy" bs-datepicker type="text">
-                        <div class="tooltip-error" ng-show="initErrortooltipEED()">{{msged}}</div>
-                    </div>
-                </div>
-            </div>
 
 
-            <div class="row style-row" ng-show="optionsRouteType.lastselectedvalue.name != 'Block Route' && optionsRouteType.lastselectedvalue.url!='' " style="min-height:200px">
-                <div class="col-lg-12  style-col">
-                    <h4>{{optionsRouteType.lastselectedvalue.name}} Details:</h4>
-                </div>
-                <div ng-include src="optionsRouteType.lastselectedvalue.url">
-
-                </div>
-            </div>
-            <div class="row style-row">
-                <div class="col-lg-12  style-col">
-                    <label class="control-label">Reason:</label>
-                    <textarea class="form-control" ng-model="Reason" />
-                </div>
             </div>
             <div class="row pad-top-m">
-                <div class="col-lg-12 col-no-padding">
+                <div class="col-lg-12 ">
                     <div class="action-bar">
                         <div class="btn-group action-bar-left">
 
                         </div>
-                        <div class="btn-group action-bar-right" >
-                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="cancel()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-                            <button ng-disabled="validateForm()" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule()">Save<span ng-init=" issaving = false" ng-show="issaving==false" style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span><img src="~/../images/loader-mask.gif" style="width:17px" ng-show="issaving" /></button>
+                        <div class="btn-group action-bar-right">
+                            <!--<button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="$hide()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>-->
+                            <button ng-disabled="validateForm()" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule();">Save<span ng-init=" issaving = false" ng-show="issaving==false" style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span><img src="~/../images/loader-mask.gif" style="width:17px" ng-show="issaving" /></button>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
+            </div>
         </div>
     </div>
-    <div id="notification"> </div>
 </div>
+
+
+
