--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
@@ -1,9 +1,9 @@
-﻿<div class="dropdown">
+﻿<div class="dropdown" name="dropdown" ng-model="ctrl.options.lastselectedvalue">
     <button class="btn btn-default dropdown-toggle" ng-class="isvalidcomp()" style="width:100%;position:relative" type="button" id="dropdownMenuRule" data-toggle="dropdown" aria-expanded="true">
         <span style="float: left; margin: 0px; ">{{ctrl.getSelectText()}}</span>
         <span style="position:absolute;top:13px;right:5px" class="caret"></span>
     </button>
-    <ul class="dropdown-menu dropdown-menu-custom" style="width:100%" role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);">
+    <ul class="dropdown-menu dropdown-menu-custom"  role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);">
         <li role="presentation">
             <div ng-repeat="c in ctrl.options.datasource" class="mark-select " ng-click="selectValue($event, c);"
                  ng-mouseenter="ctrl.muteaction($event);" style="display: block;padding:2px; margin:2px; white-space: normal;">
