--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -7,6 +7,11 @@
                 
         </div>
         <div class="row style-row">
+            <div class="col-lg-2 style-col">
+                <label class="control-label">Zone:</label>
+                <vr-dropdown type="ondemand" options="zonesOption" datatextfield="Name" datavaluefield="ZoneId"
+                             onsearch="searchZones" entityname="Zones" limitcharactercount="2"></vr-dropdown>
+            </div>
 
             <div class="col-lg-1 style-col">
                 <label class="control-label">Grouped By:</label>
@@ -26,8 +31,8 @@
                     <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-change="updateReport()">
                 </div>
             </div>
-
-        </div>
+           
+            </div>
 
         <div class="row style-row">
             <div class="col-lg-12 col-md-12   style-col">
