--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-multiple.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-multiple.html
@@ -1,4 +1,4 @@
-﻿<div class="dropdown">
+﻿<div class="dropdown" name="dropdown" ng-model="ctrl.options.selectedvalues.length" >
     <button class="btn btn-default dropdown-toggle " ng-class="isvalidcomp()" style="width:100%" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
         <span style="float:left;margin:0px"> {{ctrl.getSelectText()}}</span>
         <span style="position: absolute;top:13px;right:5px;" class="caret"></span>
