--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -12,69 +12,70 @@
                 <div>
                     <div class="panel panel-primary panel-over-color">
                         <div class="panel-body">
-                            <div>
-                                <div class="row style-row">
-                                    <div class="col-lg-2  style-col">
-                                        <label class="control-label" style="padding-top:6px">Rule Type:</label>
-                                    </div>
-                                    <div class="col-lg-2 style-col">
-                                        <vr-dropdown datatextfield="name" datavaluefield="objectType"
-                                                     entityname="" type="standard" onselectionchange="onchangeRouteRule"  options="optionsRouteType"></vr-dropdown>
-                                    </div>
-                                </div>
-                                <div class="row style-row">
-                                    <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
-                                                 onselectionchange="update2" options="optionsRuleType"></vr-dropdown>
-                                    <div ng-include src="optionsRuleType.lastselectedvalue.url">
-                                    </div>
-                                </div>
-                                <div class="row style-row">
-                                    <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
-                                                 options="optionsEditorType" onselectionchange="onchangeEditorType"></vr-dropdown>
-
-                                    <div ng-include src=" optionsEditorType.lastselectedvalue.url">
-                                    </div>
-                                </div>
-                                <div class="row style-row">
-                                    <div class="col-lg-2  style-col">
-                                        <label class="control-label" style="padding-top:6px">Begin Effective Date:</label>
-                                    </div>
-                                    <div class="col-lg-2  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                                        <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                                            <input size="10" name="d.testdate" class="form-control" ng-model="BEDDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-class="isvalidcompDate('BEDDate')">
-                                            <div class="tooltip-error" ng-show="initErrortooltipBED()">{{msgd}}</div>
+                            <form name="formRouteRuleEditor" novalidate>
+                                <div>
+                                    <div class="row style-row">
+                                        <div class="col-lg-2  style-col">
+                                            <label class="control-label" style="padding-top:6px">Rule Type:</label>
+                                        </div>
+                                        <div class="col-lg-2 style-col">
+                                            <vr-dropdown datatextfield="name" datavaluefield="objectType"
+                                                         entityname="" type="standard" onselectionchange="onchangeRouteRule" options="optionsRouteType"></vr-dropdown>
                                         </div>
                                     </div>
-                                    <div class="col-lg-2  style-col">
-                                        <label class="control-label" style="padding-top:6px">End Effective Date:</label>
-                                    </div>
-                                    <div class="col-lg-2  style-col">
-                                        <div style="display: inline-block; position: relative; width: 100%" ng-mouseenter="showtde=true" ng-mouseleave="showtde=false">
-                                            <input size="10" ng-class="isvalidcompDateEED()" class="form-control" data-min-date="{{BEDDate}}" ng-model="EEDDate" data-autoclose="1" placeholder="Date" data-date-format="dd/MM/yyyy" bs-datepicker type="text">
-                                            <div class="tooltip-error" ng-show="initErrortooltipEED()">{{msged}}</div>
+                                    <div class="row style-row">
+                                        <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
+                                                     onselectionchange="update2" options="optionsRuleType"></vr-dropdown>
+                                        <div ng-include src="optionsRuleType.lastselectedvalue.url">
                                         </div>
                                     </div>
-                                </div>
+                                    <div class="row style-row">
+                                        <vr-dropdown type="menu" datatextfield="name" datavaluefield="name"
+                                                     options="optionsEditorType" onselectionchange="onchangeEditorType"></vr-dropdown>
 
-
-                                <div class="row style-row" ng-show="optionsRouteType.lastselectedvalue.name != 'Block Route' && optionsRouteType.lastselectedvalue.url!='' " style="min-height:200px">
-                                    <div class="col-lg-12  style-col">
-                                        <h4>{{optionsRouteType.lastselectedvalue.name}} Details:</h4>
+                                        <div ng-include src=" optionsEditorType.lastselectedvalue.url">
+                                        </div>
                                     </div>
-                                    <div ng-include src="optionsRouteType.lastselectedvalue.url">
-
+                                    <div class="row style-row">
+                                        <div class="col-lg-2  style-col">
+                                            <label class="control-label" style="padding-top:6px">Begin Effective Date:</label>
+                                        </div>
+                                        <div class="col-lg-2  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                                            <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                                                <input size="10" name="d.testdate" class="form-control" ng-model="BEDDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text" ng-class="isvalidcompDate('BEDDate')">
+                                                <div class="tooltip-error" ng-show="initErrortooltipBED()">{{msgd}}</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2  style-col">
+                                            <label class="control-label" style="padding-top:6px">End Effective Date:</label>
+                                        </div>
+                                        <div class="col-lg-2  style-col">
+                                            <div style="display: inline-block; position: relative; width: 100%" ng-mouseenter="showtde=true" ng-mouseleave="showtde=false">
+                                                <input size="10" ng-class="isvalidcompDateEED()" class="form-control" data-min-date="{{BEDDate}}" ng-model="EEDDate" data-autoclose="1" placeholder="Date" data-date-format="dd/MM/yyyy" bs-datepicker type="text">
+                                                <div class="tooltip-error" ng-show="initErrortooltipEED()">{{msged}}</div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row ">
-                                    <div class="col-lg-12  style-col">
-                                        <label class="control-label">Reason:</label>
-                                        <textarea class="form-control" ng-model="Reason" />
+
+
+                                    <div class="row style-row" ng-show="optionsRouteType.lastselectedvalue.name != 'Block Route' && optionsRouteType.lastselectedvalue.url!='' " style="min-height:200px">
+                                        <div class="col-lg-12  style-col">
+                                            <h4>{{optionsRouteType.lastselectedvalue.name}} Details:</h4>
+                                        </div>
+                                        <div ng-include src="optionsRouteType.lastselectedvalue.url">
+
+                                        </div>
                                     </div>
+                                    <div class="row ">
+                                        <div class="col-lg-12  style-col">
+                                            <label class="control-label">Reason:</label>
+                                            <textarea class="form-control" ng-model="Reason" />
+                                        </div>
+                                    </div>
+
                                 </div>
-
-                            </div>
-
-                        </div>
+                            </form>
+</div>
                     </div>
                 </div>
 
